<resources>
    <string name="app_name">The universe around us</string>
    <string name="search_wiki">Search in Wikipedia</string>
    <string name="wiki_helper_text">"Search for a term on Wikipedia "</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="empty_image_url">\"Empty image URL received \"</string>
    <string name="settings">Settings</string>
    <string name="to_screen_1">To screen 1</string>
    <string name="to_screen_2">To screen 2</string>
    <string name="chose_a_theme_title">Chose a theme</string>
    <string name="blue_theme">Blue theme</string>
    <string name="orange_theme">Orange theme</string>
    <string name="green_theme">Green theme</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="photos_of_the_universe">Photos of the Universe</string>
    <string name="earth_tab_title">Earth</string>
    <string name="mars_tab_title">Mars</string>
    <string name="moon_tab_title">Moon</string>
    <string name="notes">Notes</string>
    <string name="add_new_note_fab_description">add new note</string>
    <string name="save_note_button_text">Save and close note</string>
    <string name="enter_note_text_hint">Enter a note text</string>
    <string name="priority">Priority</string>
    <string name="notes_title">Notes</string>
    <string name="edit_notes_title">Edit a note</string>
    <string name="search_notes">search a notes</string>
    <string name="high_priority_only_text">Priority filter</string>
    <string name="no_notes_text">There are no notes to display: to add a new note, click on the plus button</string>
    <string name="no_filtered_results_text">No filtered results</string>
</resources>