<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/photo_of_the_day_fragment"
        android:orderInCategory="10"
        android:icon="@drawable/ic_photo_of_the_day_menu"
        android:title="@string/photo_of_the_day"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/photos_of_the_universe_fragment"
        android:orderInCategory="20"
        android:icon="@drawable/ic_photos_of_the_universe_menu"
        android:title="@string/photos_of_the_universe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notes_fragment"
        android:orderInCategory="30"
        android:icon="@drawable/ic_notes"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_fragment"
        android:orderInCategory="40"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>